# manim-test

./: .gitignore  Makefile  README.md  example.py  footsteps.py  pyproject.toml  pytest.ini  test_example.py
scene/code_example/: __init__.py
scene/code_transform/: __init__.py  patch1.diff  patch2.diff  patch3.diff  seq2.js  seq3.js  seq4.js
scene/footsteps/: __init__.py
scene/repro_image/: __init__.py
scene/sequence/: __init__.py
