[tool.poetry]
name = "manim-test"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
manim = {git = "https://github.com/ManimCommunity/manim.git", rev = "main"}

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.401"
pytest = "^8.3.5"
ruff = "^0.11.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
